2006-04-26  Alex Roitman  <shura@gramps-project.org>
	* src/MergePeople.py: Adapt to RelLib changes.
	* src/plugins/Merge.py: Properly call MergePeople; properly call
	update; set dbstate and uistate as instance attributes.

	* src/plugins/Check.py: Adapt to new family relation types.

2006-04-26  Don Allingham  <don@gramps-project.org>
	* src/Bookmarks.py: connect goto_handle function for bookmark 
	callback
	* src/PageView.py: connect goto_handle function for bookmark 
	callback
	* src/ViewManager.py: force uimanager updates
	* src/Bookmarks.py: force uimanager updates
	* src/DisplayState.py: force uimanager updates
	* src/Navigation.py: force uimanager updates
	* src/ManagedWindow.py: force uimanager updates
	* src/DataViews/_MediaView.py: multiple bookmark lists
	* src/DataViews/_RepositoryView.py: multiple bookmark lists
	* src/DataViews/_SourceView.py: multiple bookmark lists
	* src/DataViews/_EventView.py: multiple bookmark lists
	* src/DataViews/_FamilyView.py: multiple bookmark lists
	* src/DataViews/_FamilyList.py: multiple bookmark lists
	* src/DataViews/_PedigreeView.py: multiple bookmark lists
	* src/DataViews/_PlaceView.py: multiple bookmark lists
	* src/DataViews/_PersonView.py: multiple bookmark lists
	* src/ViewManager.py: multiple bookmark lists
	* src/GrampsDb/_GrampsDbBase.py: multiple bookmark lists
	* src/GrampsDb/_GrampsBSDDB.py: multiple bookmark lists
	* src/Bookmarks.py: multiple bookmark lists
	* src/gramps_main.py: multiple bookmark lists
	* src/PageView.py: multiple bookmark lists

2006-04-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_MapView.py: First badly hacked version of online map
	downloading.

2006-04-25  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsCfg.py (build_window_key): Remove, as there's no need
	to override the base class anymore.
	* src/plugins/PatchNames.py: Adapt to new wm.
	* src/PluginUtils/_Tool.py (gui_tool): handle exception.
	* src/plugins/EventCmp.py (DisplayChart.on_write_table): Use